# supersimplat

./: .gitignore  .gitmodules  .lintstagedrc  .prettierignore  .prettierrc  AGENTS.md  CONTEXT.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.test.json
.codex/: RTK.md  codebase-memory-mcp.md
scripts/: check-prettier-eslint-compat.mjs
selection-service-companion/: README.md  pyproject.toml  sam31.json
selection-service-companion/src/selection_service_companion/: __init__.py  anchor_timing.py  benchmark.py  binary_scene_snapshot.py  cli.py  controlled_overlap_benchmark.py  evidence.py  generated_views.py  gsplat_renderer.py  masking.py  renderer_runtime.py  server.py  spatial_scene_working_set.py  state.py
selection-service-companion/tests/: test_ai_select_anchor.py  test_benchmark_records.py  test_binary_scene_snapshot_registration.py  test_binary_scene_snapshot_route.py  test_control_plane.py  test_generated_views.py  test_gsplat_contributor_renderer.py  test_mask_sessions.py  test_renderer_runtime.py  test_selection_evidence.py  test_spatial_scene_anchor.py  test_spatial_scene_gpu_parity.py  test_spatial_scene_working_set.py
src/: ai-select-anchor-frustum.ts  ai-select-editor-target.ts  camera.ts  controllers.ts  editor.ts  main.ts  object-selection-prompt-staging.ts  object-selection-session-editor.ts  object-selection-session-factory.ts  object-selection-session.ts  preferences.ts  scene-snapshot-binary.ts  scene-snapshot-registration.ts  scene-snapshot.ts  selection-service-fetch-adapter.ts  selection-service-fetch-readiness-probe.ts  selection-service-readiness-events.ts  selection-service-readiness.ts  sh-utils.ts  spatial-scene-snapshot.ts  splat-scene-snapshot.ts  splat.ts  splats-transform-handler.ts
src/ui/: editor.ts  (+11 more)
test/: ai-select-anchor-controller.test.js  anchor-dock-presentation.test.js  anchor-frustum-manipulation.test.js  bottom-panel-controller.test.js  camera-inspection.test.js  current-target-context.test.js  object-selection-session.test.js  scene-snapshot-binary.test.js  (+6 more)
(+250 files in other folders)
